<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:id="@+id/orderRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/foodImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/foodDescription" />

        <TextView
            android:id="@+id/orderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/foodImg"
            android:text="@string/order_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/orderNameExtra"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderName"
            android:layout_toEndOf="@+id/foodImg"
            android:text="@string/order_name_extra"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/vendorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderNameExtra"
            android:layout_toEndOf="@+id/foodImg"
            android:text="@string/vendor_name"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vendorName"
            android:layout_toEndOf="@+id/foodImg"
            android:text="@string/order_id"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/orderPrice"
            android:layout_width="69dp"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/orderName"
            android:gravity="end"
            android:text="@string/order_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/blank"
            android:layout_width="69dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/orderPrice"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="9dp"
            android:layout_toEndOf="@+id/vendorName"
            android:gravity="end"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/orderDate"
            android:layout_width="238dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/blank"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-132dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/orderNameExtra"
            android:gravity="end"
            android:text="@string/order_date"
            android:textAlignment="textEnd"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/orderStatus"
            android:layout_width="103dp"

            android:layout_height="wrap_content"
            android:layout_below="@+id/orderDate"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="7dp"
            android:layout_toEndOf="@+id/orderId"
            android:gravity="end"
            android:text="@string/order_status"
            android:textSize="10sp"
            android:textStyle="bold" />


    </RelativeLayout>

</android.support.v7.widget.CardView>